# malackathon25

./: .gitignore  Cargo.toml  README.md
database/: fetch_stats_dashboard_json.sql
database/migrations/schema/: 001_initial_schema.sql
src/: db.rs  handlers.rs  main.rs  templates.rs
static/: data.json  prediccion_coste_diagnostico.json  prediccion_coste_estancia.json  prediccion_coste_procedimiento.json  prediccion_edad_coste.json  styles.css
templates/: base.html  index.html
templates/pages/: error.html
