[package]
name = "malackathon25"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = { version = "0.14.0", features = ["serde_json"] }
axum = "0.8.6"
mime_guess = "2.0.5"
r2d2-oracle = "0.7.0"
rust-embed = "8.7.2"
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
